# whyfetch

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  result
whyfetch/: __init__.py  data.py  system_properties.py
